# the-ai-snake-project

./: .gitignore  CMakeLists.txt  README.md  config.py  game.py  play_human.py  pyproject.toml  train.py
agents/: DQN_agent.py  dqn_agent.py  heuristic_agent.py  heuristic_agent2.py  heuristic_agent3.py  heuristic_agent_ai.py  pgm_agent.py  tabular_agent.py  tabular_agent_mb.py
snake_ui/: renderer.py
src/: agent.cpp  main.cpp  snake_engine.cpp  snake_engine.hpp  vision_engine.cpp  vision_engine.hpp
